--- a/src/pages/main/styles.css
+++ b/src/pages/main/styles.css
@@ -1,7 +1,8 @@
 .product-list{
     max-width: 700px;
-    margin-top: 20px auto 0;
-    padding: 0 20px;
+    margin: 20px auto 0;
+    padding: 20px;
+    
 }
 
 .product-list article{
